--- a/daed-next/Makefile
+++ b/daed-next/Makefile
@@ -71,6 +71,10 @@ define Build/Prepare
 	$(TAR) --strip-components=1 -C $(PKG_BUILD_DIR)/../ -xzf $(DL_DIR)/$(PKG_NAME)-$(PKG_VERSION).tar.gz ; \
 	rm -rf $(PKG_BUILD_DIR) && git clone https://github.com/daeuniverse/dae-wing $(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)/wing ; \
 	rm -rf $(PKG_BUILD_DIR)/dae-core && git clone -b gray/sockmap https://github.com/daeuniverse/dae.git $(PKG_BUILD_DIR)/dae-core ; \
+	pushd $(PKG_BUILD_DIR)/dae-core ; \
+	go get -u ; \
+	go mod tidy ; \
+	popd ; \
 	rm -rf $(PKG_BUILD_DIR)/dae-core/control/kern/headers && git clone https://github.com/daeuniverse/dae_bpf_headers $(PKG_BUILD_DIR)/dae-core/control/kern/headers ; \
 	)
 endef
